<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/question_navigation"
    app:startDestination="@id/navigation_choose_correct_ans"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/navigation_choose_correct_ans"
        android:name="com.example.thetester.views.fragments.ChooseFragment"
        android:label="@string/title_choose"
        tools:layout="@layout/fragment_exam" />

    <fragment
        android:id="@+id/navigation_yes_or_not_with_reson"
        android:name="com.example.thetester.views.activities.ui.group.GroupFragment"
        android:label="@string/title_yes_or_not"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_why_question"
        android:name="com.example.thetester.views.activities.ui.notifications.NotificationsFragment"
        android:label="@string/title_why"
        tools:layout="@layout/fragment_notifications" />


    <fragment
        android:id="@+id/navigation_compelete"
        android:name="com.example.thetester.views.activities.ui.correct.CorrectionFragment"
        android:label="@string/title_complete"
        tools:layout="@layout/fragment_notifications" />
</navigation>