<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:id="@+id/tv_title"
                android:text="@string/teacher"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/white"
                android:textAppearance="?android:textAppearanceButton"
                android:gravity="center"
                />

            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_below="@+id/tv_title"
                android:src="@drawable/logo"
                android:id="@+id/iv_logo"
                android:layout_marginBottom="@dimen/_10sdp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/iv_logo"
                android:weightSum="3"
                android:id="@+id/ll_teacher_student"
                >

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/btn_style"
                    android:layout_below="@+id/linear_layout"
                    android:layout_centerHorizontal="true"
                    android:text="@string/teacher"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:id="@+id/btn_teacher"
                    android:layout_weight="1.5"
                    android:layout_margin="@dimen/_10sdp"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/btn_style"
                    android:layout_below="@+id/linear_layout"
                    android:layout_centerHorizontal="true"
                    android:text="@string/student"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:id="@+id/btn_student"
                    android:layout_weight="1.5"
                    android:layout_margin="@dimen/_10sdp"
                    />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tx_layout_phone"
                style="@style/et_style"
                android:layout_below="@+id/ll_teacher_student"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/_15sdp"
                    android:inputType="phone"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:id="@+id/tx_phone_login"
                    android:drawableLeft="@drawable/phone"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                style="@style/et_style"
                android:layout_below="@+id/tx_layout_phone"
                android:id="@+id/tx_layout_password"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/password"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_gravity="center"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    app:passwordToggleEnabled="true"
                    android:id="@+id/tx_password_login_layout"
                    app:passwordToggleTint="@color/white"
                    android:hint="@string/password"
                    android:layout_below="@+id/tx_layout_phone"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/_15sdp"
                        android:textColor="@color/white"
                        android:inputType="textPassword"
                        android:id="@+id/tx_password_login"
                        android:drawableLeft="@drawable/password"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tx_layout_password"
                android:orientation="horizontal"
                android:weightSum="3"
                android:id="@+id/linear_layout"
                >

                <TextView
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:id="@+id/tv_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:text="@string/forget_password"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sdp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:id="@+id/ch_remember_me"
                    android:text="@string/remember_me"
                    android:textSize="@dimen/_20sdp"
                    android:layout_weight="0.5"
                    />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                style="@style/btn_style"
                android:layout_below="@+id/linear_layout"
                android:layout_centerHorizontal="true"
                android:text="@string/login"
                android:layout_marginTop="@dimen/_20sdp"
                android:id="@+id/btn_login"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_register_login"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:clickable="true"
                android:src="@drawable/add_user"
                android:tooltipText="@string/teacher_register"
                app:backgroundTint="@color/fab_background"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/_10sdp"
                />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>